Added Casetify details

--- a/project-casetify.html
+++ b/project-casetify.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casetify Redesign</title>
-    <link rel="stylesheet" href="css/project1.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/project1.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/other-projects.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+
+    <script defer src="js/header-adjustment.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,6 +50,17 @@
           />
         </div>
       </section>
+      <!-- Sticky Navbar -->
+      <nav id="navbar">
+        <a href="#section-problem">Problem</a>
+        <a href="#section-goals">Goals</a>
+        <a href="#section-research">Research</a>
+        <a href="#section-target-group">Target Group</a>
+        <a href="#section-color-scheme">Color Scheme</a>
+        <a href="#section-layout">Layout</a>
+        <a href="#section-design-style">Design Style</a>
+        <a href="#third-section">Preview</a>
+      </nav>
       <!-- Text Section -->
       <section id="second-section">
         <!-- Project Info -->
@@ -82,8 +96,10 @@
         <!-- Project Text -->
         <div class="project-text">
           <!-- Problem -->
-          <div class="project-text-section">
+          <div id="section-problem" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Problem</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p>
                 Casetify's home page was already good, but it had not received
@@ -96,8 +112,10 @@
             </div>
           </div>
           <!-- Goals -->
-          <div class="project-text-section">
+          <div id="section-goals" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Goals</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p>
                 The goal of the redesign was to improve the user flow and make
@@ -111,8 +129,10 @@
             </div>
           </div>
           <!-- Research -->
-          <div class="project-text-section">
+          <div id="section-research" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Research</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
                 To start, I researched the brand, mission, vision, and target
@@ -129,6 +149,133 @@
                 overall user experience of the homepage. To create a cohesive
                 visual identity, I developed a design that aligned with
                 Casetify's brand guidelines.
+              </p>
+            </div>
+          </div>
+          <!-- Target Group -->
+          <div id="section-target-group" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Target Group</div>
+            <!-- Text Section -->
+            <div class="section-text">
+              <p style="padding-bottom: 0">
+                Casetify's target group is primarily young, tech-savvy, and
+                fashion-conscious individuals who are looking for unique and
+                personalized accessories for their mobile devices. This group is
+                typically made up of millennials and Generation Z, who are
+                active on social media and value self-expression and
+                individuality.
+              </p>
+              <p>
+                Casetify's products are designed to appeal to this group by
+                offering a wide range of customizable designs, trendy patterns,
+                and stylish collaborations with popular brands and artists.
+                Additionally, Casetify's focus on sustainability and
+                eco-friendliness may also appeal to this target group, who are
+                increasingly interested in ethical and sustainable consumer
+                products.
+              </p>
+            </div>
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/project-casetify-moodboard.png"
+                alt="Mood Board Showcase"
+                style="padding-bottom: 2rem"
+              />
+            </div>
+          </div>
+          <!-- Color Scheme -->
+          <div id="section-color-scheme" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Color Scheme</div>
+            <!-- Text Section -->
+            <div class="section-text">
+              <p style="padding-bottom: 0">
+                Casetify's website primarily uses a bold and playful color
+                scheme, featuring a mix of bright, eye-catching colors.
+              </p>
+              <p style="padding-bottom: 0">
+                The dominant colors used on Casetify's website are actually
+                white (#FFFFFF) and black (#000000). These two colors create a
+                clean and modern look that is consistent throughout the website.
+              </p>
+              <p style="padding-bottom: 0">
+                While there are certainly accent colors used on the website,
+                such as red, blue, and green, these colors are used more
+                sparingly and primarily to draw attention to specific elements,
+                such as buttons, important information and links.
+              </p>
+              <p>
+                Additionally, Casetify features a wide range of colorful product
+                images on their website, which further reinforces the brand's
+                fun and playful aesthetic. Overall, the use of bold and bright
+                colors helps to create a visually engaging and memorable
+                experience for users.
+              </p>
+            </div>
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/project-casetify-colorscheme.png"
+                alt="Color Scheme Showcase"
+                style="padding-bottom: 2rem"
+              />
+            </div>
+          </div>
+          <!-- Layout -->
+          <div id="section-layout" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Layout</div>
+            <!-- Text Section -->
+            <div class="section-text">
+              <p>
+                When creating the layout for my project, I started by defining
+                my goals and objectives for the page. I wanted to increase
+                engagement and build brand awareness, so I identified the key
+                content areas that would help me achieve these goals, including
+                promotions, perks, important items, latest arrivals, customer
+                opinions, community, and a newsletter subscription form. Next, I
+                worked on arranging these elements in a visually appealing and
+                easy-to-navigate way.
+              </p>
+            </div>
+            <!-- Image Section -->
+            <div class="section-images" style="width: 175%">
+              <img
+                class="app-img"
+                src="imgs/project-casetify-layout1.png"
+                alt="Layout Showcase"
+                style="padding-bottom: 0"
+              />
+              <img
+                class="app-img"
+                src="imgs/project-casetify-layout2.png"
+                alt="Layout Showcase"
+                style="padding-bottom: 2rem; padding-top: 0"
+              />
+            </div>
+          </div>
+          <!-- Design Style -->
+          <div id="section-design-style" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Design Style</div>
+            <!-- Text Section -->
+            <div class="section-text">
+              <p>
+                When designing my project, I wanted to create a style that was
+                modern, sleek, and visually appealing. I focused on using a
+                minimalist design approach, with clean lines and a simple color
+                palette to make the content stand out. I also incorporated bold
+                typography to add visual interest and hierarchy to the layout.
+                To create a cohesive look and feel, I used consistent branding
+                elements throughout the design, including typography and
+                imagery. By paying attention to the details and focusing on a
+                modern and minimalist style, I was able to create a visually
+                compelling design that effectively communicated the brand
+                message.
               </p>
             </div>
           </div>
