--- a/project-spotify.html
+++ b/project-spotify.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Redesign</title>
-    <link rel="stylesheet" href="css/project2.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/project2.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/other-projects.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+
+    <script defer src="js/header-adjustment.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,6 +50,22 @@
           />
         </div>
       </section>
+      <!-- Sticky Navbar -->
+      <nav id="navbar">
+        <a href="#section-problem">Problem</a>
+        <a href="#section-goals">Goals</a>
+        <a href="#section-solutions">Solutions</a>
+        <a href="#section-research">Research</a>
+        <a href="#section-interviews">Interviews</a>
+        <a href="#section-insights">Insights</a>
+        <a href="#section-user-journeys">User Journeys</a>
+        <a href="#section-user-personas">User Personas</a>
+        <a href="#section-ideation">Ideation</a>
+        <a href="#section-user-flow">User Flow</a>
+        <a href="#section-prototype">Prototype</a>
+        <a href="#section-user-testing">User Testing</a>
+        <a href="#section-reflection">Reflection</a>
+      </nav>
       <!-- Text Section -->
       <section id="second-section">
         <!-- Project Info -->
