--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wasteless</title>
-    <link rel="stylesheet" href="css/project4.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/project4.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/other-projects.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+
     <script defer src="js/header-adjustment.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
