Adjusted Spotify page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="">GG</a>
+          <a class="gg-link" href="">Galina Ganeva</a>
         </div>
       </div>
       <div class="right-section">
