--- a/project-casetify.html
+++ b/project-casetify.html
@@ -26,7 +26,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">GG</a>
+          <a class="gg-link" href="index.html">Galina Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -243,7 +243,7 @@
               </p>
             </div>
             <!-- Image Section -->
-            <div class="section-images" style="width: 175%">
+            <div class="section-images bigger-img">
               <img
                 class="app-img"
                 src="imgs/project-casetify-layout1.png"
