--- a/project-spotify.html
+++ b/project-spotify.html
@@ -26,7 +26,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">GG</a>
+          <a class="gg-link" href="index.html">Galina Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -54,17 +54,10 @@
       <nav id="navbar">
         <a href="#section-problem">Problem</a>
         <a href="#section-goals">Goals</a>
-        <a href="#section-solutions">Solutions</a>
         <a href="#section-research">Research</a>
-        <a href="#section-interviews">Interviews</a>
-        <a href="#section-insights">Insights</a>
-        <a href="#section-user-journeys">User Journeys</a>
-        <a href="#section-user-personas">User Personas</a>
+        <a href="#section-color-schemes">Color Schemes</a>
         <a href="#section-ideation">Ideation</a>
-        <a href="#section-user-flow">User Flow</a>
-        <a href="#section-prototype">Prototype</a>
-        <a href="#section-user-testing">User Testing</a>
-        <a href="#section-reflection">Reflection</a>
+        <a href="#third-section">Before & After</a>
       </nav>
       <!-- Text Section -->
       <section id="second-section">
@@ -101,8 +94,10 @@
         <!-- Project Text -->
         <div class="project-text">
           <!-- Problem -->
-          <div class="project-text-section">
+          <div id="section-problem" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Problem</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
                 During a conversation with my friends, I gathered valuable
@@ -123,8 +118,10 @@
             </div>
           </div>
           <!-- Goals -->
-          <div class="project-text-section">
+          <div id="section-goals" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Goals</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p>
                 Improve home screen infrastructure to simplify user flows and
@@ -133,59 +130,105 @@
             </div>
           </div>
           <!-- Research -->
-          <div class="project-text-section">
+          <div id="section-research" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Research</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
-                As part of my redesign of Spotify's homescreen, I conducted a
-                user research study with a sample of approximately 6
-                individuals, consisting of friends and family members. To ensure
-                that my research findings were inclusive and representative, I
-                deliberately targeted a few individuals aged 40 and above, who
-                tend to have more difficulty navigating through digital
-                interfaces.
+                Based on my research findings, it seems that the current
+                homescreen of Spotify's desktop app may be causing some
+                frustration among its users. Users reported that the homescreen
+                looked cluttered, which could be overwhelming and confusing.
               </p>
               <p style="padding-bottom: 0">
-                Through a combination of one-on-one interviews and surveys, I
-                gathered feedback from participants on their likes and dislikes
-                of the current interface. This feedback was then compiled and
-                analyzed to identify the key issues that were causing
-                frustration and confusion for users.
+                Additionally, some users expressed a desire to have the Discover
+                section separated from the Search section, as they found it
+                difficult to navigate when these two features were combined.
+              </p>
+              <p style="padding-bottom: 0">
+                Lastly, the fact that the Settings and Friends sections were
+                located within the Account section was a pain point for users,
+                as they wanted these features to be more easily accessible.
               </p>
               <p>
-                To further inform my redesign, I conducted a thorough analysis
-                of the user interfaces of Spotify's main competitors. This
-                enabled me to identify best practices and innovative solutions
-                that could be adapted to improve the user experience of
-                Spotify's homescreen. Based on my research findings and
-                analysis, I developed a series of wireframes and prototypes,
-                which I tested with a small group of participants to gain
-                feedback and refine my designs. The final result is a visually
-                appealing and user-friendly homescreen that addresses the key
-                pain points identified in the research.
+                Overall, it seems that there is a need to streamline the layout
+                and navigation of the desktop app to improve the user experience
+                and make it more intuitive for users to find what they're
+                looking for.
               </p>
+            </div>
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/project-spotify-research.png"
+                alt="Research Showcase"
+                style="padding-bottom: 2rem"
+              />
+            </div>
+          </div>
+          <!-- Color Schemes -->
+          <div id="section-color-schemes" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Color Schemes</div>
+            <!-- Text Section -->
+            <div class="section-text">
+              <p style="padding-bottom: 0">
+                In my opinion, Spotify's use of dark colors in their desktop app
+                may not be as effective as they intended it to be. Through my
+                research, I found that some users reported that the dark colors
+                made the appearance look cluttered and disorienting, which could
+                be a barrier to a positive user experience.
+              </p>
+              <p style="padding-bottom: 0">
+                While dark color schemes can be visually striking and create a
+                sense of depth, it seems that in this case it may have had
+                unintended negative consequences. It's important to consider the
+                balance between aesthetics and usability when designing an app,
+                and to make sure that the visual design supports the
+                functionality of the app.
+              </p>
+              <p>
+                In this case, it may be worth exploring a little bit lighter
+                color schemes or design elements to create a more streamlined
+                and user-friendly experience for users.
+              </p>
+            </div>
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/project-spotify-colorscheme.png"
+                alt="Color Scheme Showcase"
+                style="padding-bottom: 2rem"
+              />
             </div>
           </div>
           <!-- Ideation -->
-          <div class="project-text-section">
+          <div id="section-ideation" class="project-text-section">
+            <!-- Title -->
             <div class="section-title">Ideation</div>
+            <!-- Text Section -->
             <div class="section-text">
               <p>
                 The ideation process involved generating and exploring a variety
                 of potential solutions to address the pain points identified
                 during the research phase. This was done through a collaborative
-                and iterative process that involved brainstorming, sketching
-                wireframes, and testing prototypes with users. The resulting
-                designs effectively addressed the key pain points identified
-                during the research phase. Ultimately, I decided that this one
-                was the best of all of them.
+                and iterative process that involved brainstorming and sketching
+                wireframes. The resulting design effectively addressed the key
+                pain points.
               </p>
             </div>
-            <img
-              class="ideation full"
-              src="imgs/Ideation.png"
-              alt="Project Ideation"
-            />
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/Ideation.png"
+                alt="Color Scheme Showcase"
+                style="padding-bottom: 2rem"
+              />
+            </div>
           </div>
         </div>
       </section>
