--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">GG</a>
+          <a class="gg-link" href="index.html">Galina Ganeva</a>
         </div>
       </div>
       <div class="right-section">
