--- a/project-biscfit.html
+++ b/project-biscfit.html
@@ -26,7 +26,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">GG</a>
+          <a class="gg-link" href="index.html">Galina Ganeva</a>
         </div>
       </div>
       <div class="right-section">
