Adjusted biscfit page

--- a/project-biscfit.html
+++ b/project-biscfit.html
@@ -52,19 +52,10 @@
       </section>
       <!-- Sticky Navbar -->
       <nav id="navbar">
-        <a href="#section-problem">Problem</a>
+        <a href="#section-brief">Brief</a>
         <a href="#section-goals">Goals</a>
-        <a href="#section-solutions">Solutions</a>
         <a href="#section-research">Research</a>
-        <a href="#section-interviews">Interviews</a>
-        <a href="#section-insights">Insights</a>
-        <a href="#section-user-journeys">User Journeys</a>
-        <a href="#section-user-personas">User Personas</a>
-        <a href="#section-ideation">Ideation</a>
-        <a href="#section-user-flow">User Flow</a>
-        <a href="#section-prototype">Prototype</a>
-        <a href="#section-user-testing">User Testing</a>
-        <a href="#section-reflection">Reflection</a>
+        <a href="#section-finalresults">Final Results</a>
       </nav>
       <!-- Text Section -->
       <section id="second-section">
@@ -100,8 +91,8 @@
         </div>
         <!-- Project Text -->
         <div class="project-text">
-          <!-- Problem -->
-          <div class="project-text-section">
+          <!-- Brief -->
+          <div id="section-brief" class="project-text-section">
             <div class="section-title">Brief</div>
             <div class="section-text">
               <p>
@@ -115,7 +106,7 @@
             </div>
           </div>
           <!-- Goals -->
-          <div class="project-text-section">
+          <div id="section-goals" class="project-text-section">
             <div class="section-title">Goals</div>
             <div class="section-text">
               <p>
@@ -129,7 +120,7 @@
             </div>
           </div>
           <!-- Research -->
-          <div class="project-text-section">
+          <div id="section-research" class="project-text-section">
             <div class="section-title">Research</div>
             <div class="section-text">
               <p style="padding-bottom: 0">
@@ -154,7 +145,7 @@
             </div>
           </div>
           <!-- Final Results -->
-          <div class="project-text-section">
+          <div id="section-finalresults" class="project-text-section">
             <div class="section-title">Final Results</div>
           </div>
         </div>
