--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">Galina Ganeva</a>
+          <a class="gg-link" href="index.html">Galina<br>Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -46,40 +46,31 @@
             <p>
               <img
                 class="text-icon"
-                src="imgs/smiley-heart-icon.svg"
-                alt="Smiley Heart Icon"
+                src="imgs/wavingEmoji.png"
+                alt="Waving Hand Emoji"
               />
-              I'm an aspiring designer studying Web Design at New Bulgarian
-              University. I'm from Burgas, however, I moved to Sofia to pursue
-              my bachelor's degree.
-            </p>
-            <p>
-              <img
-                class="text-icon test"
-                src="imgs/suitcase-icon.svg"
-                alt="Suitcase Icon"
-              />
-              My work experience as a customer support representative has made
-              me a person who can work under pressure. I confidently call myself
-              responsible and efficient in what I do. One of my best skills is
-              thoroughly analyzing problems, which allows me to solve them
-              quickly and efficiently without getting tired easily.
-            </p>
-            <p>
-              <img
-                class="text-icon test"
-                src="imgs/design-icon.svg"
-                alt="Design Icon"
-              />
-              Through my work experience as a freelance designer, I have learned
-              that I am passionate about clear design and have a keen eye for
-              detail. This enables me to create high-quality design solutions
-              through wireframes, visual designs, and interactive prototypes.
+              Hello! I'm Galina, a passionate and dedicated UI/UX Designer with a love for creating exceptional digital experiences. With a background in web design and a keen eye for aesthetics, I'm on a mission to make the digital world more user-friendly and visually engaging.
             </p>
             <p>
               <img
                 class="text-icon"
-                src="imgs/palmtree-icon.svg"
+                src="imgs/graduation-cap.png"
+                alt="Smiley Heart Icon"
+              />
+              Currently, I'm pursuing a degree in web design at New Bulgarian University, where I'm constantly honing my skills and delving deeper into the intricacies of web development. This academic journey fuels my passion for innovation and keeps me up-to-date with industry trends.
+            </p>
+            <?>
+              <img
+                class="text-icon test"
+                src="imgs/briefcase.png"
+                alt="Suitcase Icon"
+              />
+              During my UI/UX Design internship at SBT Solution, I gained hands-on experience in user research, wireframing, and creating user-centered interfaces. Working alongside seasoned professionals, I deepened my design knowledge and developed practical skills that continue to shape my career in UI/UX design.
+          </p>
+            <p>
+              <img
+                class="text-icon"
+                src="imgs/palm-tree.png"
                 alt="Palmtree Icon"
               />
               When I'm not studying or designing, I enjoy spending time with my
