--- a/project-biscfit.html
+++ b/project-biscfit.html
@@ -26,7 +26,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">Galina Ganeva</a>
+          <a class="gg-link" href="index.html">Galina<br>Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -185,19 +185,19 @@
           <a href="project-wasteless.html"
             ><img
               class="other-project-picture"
-              src="imgs/project4.png"
+              src="imgs/project-wasteless.png"
               alt="First Project Picture"
           /></a>
           <a href="project-spotify.html"
             ><img
               class="other-project-picture"
-              src="imgs/project2.png"
+              src="imgs/project-spotify.png"
               alt="Second Project Picture"
           /></a>
           <a href="project-casetify.html"
             ><img
               class="other-project-picture"
-              src="imgs/project1.png"
+              src="imgs/project-casetify.png"
               alt="Third Project Picture"
           /></a>
         </div>
