--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galina Ganeva Portfolio</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
@@ -19,13 +19,11 @@
     <link rel="icon" href="imgs/favicon.ico" />
   </head>
   <body>
-    <img class="hero-background" src="imgs/background.png" alt="" />
-
     <!-- Header -->
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="">Galina Ganeva</a>
+          <a class="gg-link" href="index.html">Galina<br>Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -40,275 +38,79 @@
 
     <!-- Main -->
     <main id="main-content">
-      <!-- First Section -->
-      <section class="first-section transparent">
-        <div id="hero-section" class="transparent">
-          <div class="hero-text hidden-left">
-            <p class="hero-title">
-              <span style="background-color: #fafafa">HI, I'M </span>
-              <span class="hero-name">GALINA</span>
-            </p>
-          </div>
-          <p class="hero-desc hidden-left">
-            A web design student and an aspiring designer
-          </p>
-          <div class="empty-background hidden-right"></div>
-          <div class="hero-portfolio hidden-right">
-            <p class="hero-portfolio-text">MY PORT FOLIO</p>
-          </div>
+      <!-- Title Section -->
+      <section id="homepage-main">
+        <div class="homepage-title">
+
+          <h1><span><img class="icon-main" src="imgs/wavingEmoji.png" alt="Waving Emoji"></span> HI, I'M GALINA</h1>
+
+          <h2 class="main-title-subtext">A passionate <span class="subtext-bold">UI/UX Designer</span>, dedicated to bringing digital dreams to life.</h2>
         </div>
-        <!-- Arrows -->
-        <a href="#second-section" class="arrow-container">
-          <i class="arrow-down"></i>
-          <i class="arrow-down"></i>
-        </a>
+        <h2 class="homepage-title-desc">I thrive on the art of translating ideas into intuitive, aesthetically pleasing interfaces that engage and empower users. With a deep love for user-centric design, I'm committed to crafting digital experiences that leave a lasting impact.</h2>
       </section>
-
-      <!-- My Projects -->
-      <div class="project-text-container">
-        <div class="empty"></div>
-        <div class="projects-text">MY PROJECTS</div>
-        <!-- Separation Line -->
-        <div class="projects-line">
-          <div class="my-projects-line"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-        </div>
-      </div>
-
-      <!-- Second Section Wasteless -->
-      <section id="second-section" class="project-section second-section">
-        <!-- Project Container -->
-        <div class="item-section hidden-left">
-          <div class="project-container">
-            <!-- Image -->
-            <div class="project-img">
-              <a href="project-wasteless.html"
-                ><img
-                  class="project-picture"
-                  src="imgs/project4.png"
-                  alt="First Project Picture"
-              /></a>
+      <!-- Projects Section -->
+      <section id="homepage-projects">
+        <h2 class="homepage-projects-title">MY PROJECTS</h2>
+          <div class="projects-container">
+            <!-- Row 1 -->
+            <div class="projects-row">
+              <!-- Item 1 -->
+              <div class="project-item">
+                <img src="imgs/project-wasteless.png" alt="Project Icon">
+                <a href="project-wasteless.html">
+                  <div class="project-item-overlay">
+                    <h3 class="overlay-year">2023</h3>
+                    <div class="overlay-container">
+                      <h2>Wasteless App</h2>
+                      <h3>App that tracks expiration dates of food in your home</h3>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- Item 2 -->
+              <div class="project-item">
+                <img src="imgs/project-casetify.png" alt="Project Icon">
+                <a href="project-casetify.html">
+                  <div class="project-item-overlay">
+                    <h3 class="overlay-year">2022</h3>
+                    <div class="overlay-container">
+                      <h2>Casetify<br>Home Page Redesign</h2>
+                      <h3>Fresh and modern redesign of the Casetify Home Page</h3>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
-            <!-- Text -->
-            <div class="project-text">
-              <p class="project-year">2023</p>
-              <div class="project-content">
-                <a class="project-title" href="project-wasteless.html"
-                  >Wasteless App</a
-                >
-                <p class="project-desc">
-                  App that tracks expiration dates of food in your home
-                </p>
-                <a class="view-project" href="project-wasteless.html"
-                  >View Project</a
-                >
+            <!-- Row 2 -->
+            <div class="projects-row">
+              <!-- Item 1 -->
+              <div class="project-item">
+                <img src="imgs/project-spotify.png" alt="Project Icon">
+                <a href="project-spotify.html">
+                  <div class="project-item-overlay">
+                    <h3 class="overlay-year">2022</h3>
+                    <div class="overlay-container">
+                      <h2>Spotify <br>Home Screen Redesign</h2>
+                      <h3>A version of the current Spotify home screen that simpifies the user flow</h3>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- Item 2 -->
+              <div class="project-item">
+                <img src="imgs/project-biscfit.png" alt="Project Icon">
+                <a href="project-biscfit.html">
+                  <div class="project-item-overlay">
+                    <h3 class="overlay-year">2022</h3>
+                    <div class="overlay-container">
+                      <h2>Bisc-Fit</h2>
+                      <h3>Biscuits that solve the problem of tasteless healthy food</h3>
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Project Number Line -->
-        <div class="project-number-container">
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-line"></div>
-          <div class="project-number">01</div>
-          <div class="project-line"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-        </div>
-      </section>
-
-      <!-- Separation Line -->
-      <div class="separation-line">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="line"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-      </div>
-
-      <!-- Third Section Casetify -->
-      <section id="third-section" class="project-section third-section">
-        <!-- Project Container -->
-        <div class="item-section hidden-right">
-          <div class="project-container">
-            <!-- Image -->
-            <div class="project-img">
-              <a href="project-casetify.html"
-                ><img
-                  class="project-picture"
-                  src="imgs/project1.png"
-                  alt="First Project Picture"
-              /></a>
-            </div>
-            <!-- Text -->
-            <div class="project-text">
-              <p class="project-year">2022</p>
-              <div class="project-content">
-                <a class="project-title" href="project-casetify.html"
-                  >Casetify Home Page Redesign</a
-                >
-                <p class="project-desc">
-                  Fresh and modern redesign of the Casetify Home Page
-                </p>
-                <a class="view-project" href="project-casetify.html"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Project Number Line -->
-        <div class="project-number-container">
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-line"></div>
-          <div class="project-number">02</div>
-          <div class="project-line"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-        </div>
-      </section>
-
-      <!-- Separation Line -->
-      <div class="separation-line">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="line"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-      </div>
-
-      <!-- Fourth Section Spotify -->
-      <section id="fourth-section" class="project-section fourth-section">
-        <!-- Project Container -->
-        <div class="item-section hidden-left">
-          <div class="project-container">
-            <!-- Image -->
-            <div class="project-img">
-              <a href="project-spotify.html"
-                ><img
-                  class="project-picture"
-                  src="imgs/project2.png"
-                  alt="Second Project Picture"
-              /></a>
-            </div>
-            <!-- Text -->
-            <div class="project-text">
-              <p class="project-year">2023</p>
-              <div class="project-content">
-                <a href="project-spotify.html" class="project-title"
-                  >Spotify Home Screen Redesign</a
-                >
-                <p class="project-desc">
-                  A version of the current Spotify home screen that simpifies
-                  the user flow
-                </p>
-                <a class="view-project" href="project-spotify.html"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Project Number Line -->
-        <div class="project-number-container">
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-line"></div>
-          <div class="project-number">03</div>
-          <div class="project-line"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-        </div>
-      </section>
-
-      <!-- Separation Line -->
-      <div class="separation-line">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="line"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-      </div>
-
-      <!-- Fifth Section Bisc-Fit -->
-      <section class="project-section third-section">
-        <!-- Project Container -->
-        <div class="item-section hidden-right">
-          <div class="project-container">
-            <!-- Image -->
-            <div class="project-img">
-              <a href="project-biscfit.html"
-                ><img
-                  class="project-picture"
-                  src="imgs/project3.png"
-                  alt="First Project Picture"
-              /></a>
-            </div>
-            <!-- Text -->
-            <div class="project-text">
-              <p class="project-year">2023</p>
-              <div class="project-content">
-                <a class="project-title" href="project-biscfit.html"
-                  >Bisc-Fit</a
-                >
-                <p class="project-desc">Healthy and tasty cookie brand</p>
-                <a class="view-project" href="project-biscfit.html"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Project Number Line -->
-        <div class="project-number-container">
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-line"></div>
-          <div class="project-number">04</div>
-          <div class="project-line"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-          <div class="project-square"></div>
-        </div>
       </section>
     </main>
 
