adjusted visuals + added new html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">Galina<br>Ganeva</a>
+          <a class="gg-link" href="index.html">Galina<br />Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -40,77 +40,98 @@
     <main id="main-content">
       <!-- Title Section -->
       <section id="homepage-main">
+        <h1>
+          <span
+            ><img
+              class="icon-main"
+              src="imgs/wavingEmoji.png"
+              alt="Waving Emoji"
+          /></span>
+          HI, I'M GALINA
+        </h1>
         <div class="homepage-title">
-
-          <h1><span><img class="icon-main" src="imgs/wavingEmoji.png" alt="Waving Emoji"></span> HI, I'M GALINA</h1>
-
-          <h2 class="main-title-subtext">A passionate <span class="subtext-bold">UI/UX Designer</span>, dedicated to bringing digital dreams to life.</h2>
+          <h2 class="main-title-subtext">
+            A passionate <span class="subtext-bold">UI/UX Designer</span>,
+            dedicated to bringing digital dreams to life.
+          </h2>
         </div>
-        <h2 class="homepage-title-desc">I thrive on the art of translating ideas into intuitive, aesthetically pleasing interfaces that engage and empower users. With a deep love for user-centric design, I'm committed to crafting digital experiences that leave a lasting impact.</h2>
+        <h2 class="homepage-title-desc">
+          I thrive on the art of translating ideas into intuitive, aesthetically
+          pleasing interfaces that engage and empower users. With a deep love
+          for user-centric design, I'm committed to crafting digital experiences
+          that leave a lasting impact.
+        </h2>
       </section>
       <!-- Projects Section -->
       <section id="homepage-projects">
         <h2 class="homepage-projects-title">MY PROJECTS</h2>
-          <div class="projects-container">
-            <!-- Row 1 -->
-            <div class="projects-row">
-              <!-- Item 1 -->
-              <div class="project-item">
-                <img src="imgs/project-wasteless.png" alt="Project Icon">
-                <a href="project-wasteless.html">
-                  <div class="project-item-overlay">
-                    <h3 class="overlay-year">2023</h3>
-                    <div class="overlay-container">
-                      <h2>Wasteless App</h2>
-                      <h3>App that tracks expiration dates of food in your home</h3>
-                    </div>
+        <div class="projects-container">
+          <!-- Row 1 -->
+          <div class="projects-row">
+            <!-- Item 1 -->
+            <div class="project-item">
+              <img src="imgs/project-wasteless.png" alt="Project Icon" />
+              <a href="project-wasteless.html">
+                <div class="project-item-overlay">
+                  <h3 class="overlay-year">2023</h3>
+                  <div class="overlay-container">
+                    <h2>Wasteless App</h2>
+                    <h3>
+                      App that tracks expiration dates of food in your home
+                    </h3>
                   </div>
-                </a>
-              </div>
-              <!-- Item 2 -->
-              <div class="project-item">
-                <img src="imgs/project-casetify.png" alt="Project Icon">
-                <a href="project-casetify.html">
-                  <div class="project-item-overlay">
-                    <h3 class="overlay-year">2022</h3>
-                    <div class="overlay-container">
-                      <h2>Casetify<br>Home Page Redesign</h2>
-                      <h3>Fresh and modern redesign of the Casetify Home Page</h3>
-                    </div>
-                  </div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
-            <!-- Row 2 -->
-            <div class="projects-row">
-              <!-- Item 1 -->
-              <div class="project-item">
-                <img src="imgs/project-spotify.png" alt="Project Icon">
-                <a href="project-spotify.html">
-                  <div class="project-item-overlay">
-                    <h3 class="overlay-year">2022</h3>
-                    <div class="overlay-container">
-                      <h2>Spotify <br>Home Screen Redesign</h2>
-                      <h3>A version of the current Spotify home screen that simpifies the user flow</h3>
-                    </div>
+            <!-- Item 2 -->
+            <div class="project-item">
+              <img src="imgs/project-casetify.png" alt="Project Icon" />
+              <a href="project-casetify.html">
+                <div class="project-item-overlay">
+                  <h3 class="overlay-year">2022</h3>
+                  <div class="overlay-container">
+                    <h2>Casetify<br />Home Page Redesign</h2>
+                    <h3>Fresh and modern redesign of the Casetify Home Page</h3>
                   </div>
-                </a>
-              </div>
-              <!-- Item 2 -->
-              <div class="project-item">
-                <img src="imgs/project-biscfit.png" alt="Project Icon">
-                <a href="project-biscfit.html">
-                  <div class="project-item-overlay">
-                    <h3 class="overlay-year">2022</h3>
-                    <div class="overlay-container">
-                      <h2>Bisc-Fit</h2>
-                      <h3>Biscuits that solve the problem of tasteless healthy food</h3>
-                    </div>
-                  </div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
           </div>
+          <!-- Row 2 -->
+          <div class="projects-row">
+            <!-- Item 1 -->
+            <div class="project-item">
+              <img src="imgs/project-spotify.png" alt="Project Icon" />
+              <a href="project-spotify.html">
+                <div class="project-item-overlay">
+                  <h3 class="overlay-year">2022</h3>
+                  <div class="overlay-container">
+                    <h2>Spotify <br />Home Screen Redesign</h2>
+                    <h3>
+                      A version of the current Spotify home screen that
+                      simpifies the user flow
+                    </h3>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- Item 2 -->
+            <div class="project-item">
+              <img src="imgs/project-biscfit.png" alt="Project Icon" />
+              <a href="project-biscfit.html">
+                <div class="project-item-overlay">
+                  <h3 class="overlay-year">2022</h3>
+                  <div class="overlay-container">
+                    <h2>Bisc-Fit</h2>
+                    <h3>
+                      Biscuits that solve the problem of tasteless healthy food
+                    </h3>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
